--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron": "^18.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
